--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 
 #footer {
   background-color: #444;
-  color: #aaa;
+  color: #B3B3B3;
   font-size: .8em;
   letter-spacing: 1px;
   padding: 10px;
@@ -105,7 +105,7 @@ nav h1 a {
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-    color: #0275d8;
+    color: #1C70AB;
     text-decoration: none;
 }
 
@@ -122,12 +122,16 @@ nav h1 a {
   background-color: #ccc;
 }
 
+.leaflet-container a {
+    color: #0075A3;
+}
+
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   padding-top: 8px;
   width: 100%;
   height: 100%;
-  background-color: #3397DB;
+  background-color: #1C70AB;
   align-items: center;
   display: flex;
   flex-wrap: wrap;
@@ -146,7 +150,7 @@ nav h1 a {
   background-color: white;
   border: 1px solid #fff;
   font-family: Arial,sans-serif;
-  font-size: 1.1em;
+  font-size: 1em;
   height: 35px;
   letter-spacing: 0;
   margin: 10px;
@@ -187,9 +191,9 @@ nav h1 a {
 }
 
 #restaurants-list li h1 {
-  color: #f18200;
+  color: #D67200;
   font-family: Arial,sans-serif;
-  font-size: 1.4em;
+  font-size: 1.5em;
   font-weight: 200;
   letter-spacing: 0;
   line-height: 1.3;
@@ -203,7 +207,7 @@ nav h1 a {
 }
 
 #restaurants-list li a {
-  background-color: orange;
+  background-color: #B35D00;
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
@@ -239,7 +243,7 @@ nav h1 a {
 }
 
 #restaurant-name {
-  color: #f18200;
+  color: #D67200;
   font-family: Arial,sans-serif;
   font-size: 2em;
   font-weight: 200;
@@ -290,7 +294,7 @@ nav h1 a {
 }
 
 #reviews-container h2 {
-  color: #f58500;
+  color: #D67200;
   font-size: 2.4em;
   font-weight: 300;
   letter-spacing: -1px;
